--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "type": "module",
   "version": "0.0.1",
   "private": true,
-  "author": {"name": "PanJohnny", "url": "https://github.com/PanJohnny"},
+  "author": {
+    "name": "PanJohnny",
+    "url": "https://github.com/PanJohnny"
+  },
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -14,6 +17,7 @@
   "dependencies": {
     "@astrojs/vercel": "^2.3.4",
     "astro": "^1.6.11",
-    "fast-xml-parser": "^4.0.12"
+    "fast-xml-parser": "^4.0.12",
+    "jsdom": "^21.1.0"
   }
 }
